Add media queries and cross-browser compatibility tools

--- a/style.css
+++ b/style.css
@@ -1,25 +1,46 @@
+/* To ensure cross-browser compatibility for flexbox, add: -webkit-box; and -ms-flexbox; */
+/* To ensure cross-browser CSS compatibility, add this line in the HTML file:
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+ */
+ /* Use W3C Validator, and test the website on different browsers as well */
+
 html {
     font-size: 10px;
     /* background: url('./background.jpg') bottom center; */
     /* background: url('./records.png') bottom center; */
-    background: url('./mic.png') bottom center;
+    background: url('./mic.png') no-repeat center center fixed;
     background-size: cover;
+    height: 100%;
   }
-  
   body,html {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-  }
-  
-  .keys {
+    height: 100%;
     display: flex;
-    flex: 1;
-    min-height: 100vh;
+    flex-direction: column;
+  }
+  h1 {
+    text-transform: uppercase;
+    font-size: 3rem;
+    color: white;
+    text-shadow: 0 0 .5rem black;
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Center by default */
+    height: 100vh; /* Take up full height of the viewport */
+  }
+  .keys {
+    display: -webkit-box; /* Ensure cross-browser compatibility for flexbox */
+    display: -ms-flexbox; /* Ensure cross-browser compatibility for flexbox */
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1; /* Take up remaining space */
+    height: 100vh; /* Take up full height of the viewport */
     align-items: center;
     justify-content: center;
+    margin-bottom: 7%;
   }
-  
   .key {
     border: .25rem solid black;
     border-radius: .5rem;
@@ -34,13 +55,11 @@ html {
     text-shadow: 0 0 .5rem black;
     margin-top: 20%;
   }
-  
   .playing65 {
     transform: scale(1.1);
     border-color: #ffc600;
     box-shadow: 0 0 1rem #ffc600;
   }
-
   .playing83 {
     transform: scale(1.1);
     border-color: #ddff00;
@@ -85,10 +104,74 @@ html {
     display: block;
     font-size: 4rem;
   }
-  
   .sound {
     font-size: 1.2rem;
     text-transform: uppercase;
     letter-spacing: .1rem;
     color: #dd78de;
   }
+
+  /* Media queries */
+
+  /* Small devices (smartphones) */
+@media (max-width: 768px) {
+  h1 {
+    font-size: 1.5rem;
+    justify-content: center; /* Center align on small screens */
+    padding-left: 10%;
+  }
+  .key {
+    margin: 0.5rem; /* Reduce margin for smaller devices */
+    font-size: 1.2rem;
+    padding-right: 10%; 
+    padding: 1rem;
+  }
+  kbd {
+    font-size: 2.5rem;
+  }
+  .sound {
+    font-size: 1rem;
+  }
+}
+
+/* Medium devices (tablets) */
+@media (min-width: 768px) and (max-width: 1024px) {
+  h1 {
+    font-size: 2rem;
+    justify-content: flex-end; /* Align right on medium screens */
+    padding-right: 10%; /* Add padding for alignment */
+    padding-left: 10%;
+  }
+  .key {
+    margin: 0.75rem; /* Reduce margin for tablets */
+    font-size: 1.4rem;
+    padding: 1rem;
+  }
+  kbd {
+    font-size: 3rem;
+  }
+  .sound {
+    font-size: 1.1rem;
+  }
+}
+
+/* Large devices (desktops) */
+@media (min-width: 1024px) {
+  h1 {
+    justify-content: flex-end; /* Align right on large screens */
+    padding-right: 10%; /* Add padding for alignment */
+    padding-left: 10%;
+    font-size: 3rem;
+  }
+  .key {
+    margin: 1rem; /* Maintain margin for large devices */
+    font-size: 1.5rem;
+    padding: 1rem .5rem;
+  }
+  kbd {
+    font-size: 4rem;
+  }
+  .sound {
+    font-size: 1.2rem;
+  }
+}
