Add comment re shorcut to activate line break

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 /* Plus use W3C Validator, and test the website on different browsers. */
 
 /* Keyboard shortcuts for VSCode: https://declersoft.net/raccourci-visual-studio-code/ */
+/* Activate line break: alt + Z */
 
 html {
   font-size: 10px;
